# moplayground

./: .gitignore  .gitmodules  CLAUDE.md  README.md  environment.yml  mac_environment.yml  pyproject.toml
config/: bruce-navigait.yaml  moant.yaml  mocheetah.yaml  mohopper.yaml  mohumanoid.yaml  mowalker.yaml
config/amor/: bruce-navigait.yaml  moant.yaml  mocheetah.yaml  mohopper.yaml  mohumanoid.yaml  mowalker.yaml
docs/: CLAUDE.md  Gemfile  README.md  _config.yml  abstract.html  api-reference.md  basic-usage.md  bruce_videos.html  custom-environments.md  env_videos.html  howto.html  howto.md  index.html  installation.md  overview.md  plotting.md  simulating.md  training.md
docs/api/: index.md  moplayground.envs.create.md  moplayground.envs.generic.md  moplayground.envs.generic.mobase.md  moplayground.envs.md  moplayground.eval.md  moplayground.eval.pareto.md  moplayground.eval.rollout.md  moplayground.learning.inference.md  moplayground.learning.md  moplayground.learning.startup.md  moplayground.learning.training.md  moplayground.learning.wrappers.md  moplayground.moppo.acting.md  moplayground.moppo.factory.md  moplayground.moppo.losses.md  moplayground.moppo.md  moplayground.moppo.moppo.md  moplayground.moppo.networks.md  moplayground.utils.geometry.md  moplayground.utils.md  moplayground.utils.pareto.md  moplayground.utils.plotting.md
ral/: __init__.py  ablation_plots.py  bruce_composites.py  bruce_paretos.py  bruce_videos.py  comparison_composites.py  comparison_videos.py  dimred.py  find_point.py  generate_objs.py  get_env_structure.py  hypernetwork_type.py  overlay_paretos.py  pic_from_video.py  plot_bruce_2ds.py  plot_bruce_3d.py  plot_pareto.py  plot_tsne.py  sampling_type.py  simplex.py  simplex2.py  time_hypervolume.py
scripts/: ablation.py  ablation.sh  build_api_docs.py  download_model.py  draw_frontier.py  rollout.py  train.py  train.sh
(+430 files in other folders)
