[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moplayground"
version = "0.1.0"
description = "GPU-Accelerable Multi-Objective Playground"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Neil Janwani", email = "njanwani@gatech.com" }
]
dependencies = [
  "numpy",
  "jax",
  "playground",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]