[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moplayground"
version = "0.1.2"
description = "GPU-Accelerable Multi-Objective Playground"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Anonymous Author", email = "someone@email.com" }
]
dependencies = [
  "numpy",
  "jax",
  "playground",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]